Various issue fixes.